// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWrapper allows overriding resize prop with multiline 1`] = `
<TextField
  id="example"
  multiline={true}
  name="example"
  resize="block"
/>
`;

exports[`TextFieldWrapper renders text input 1`] = `
<TextField
  id="example"
  name="example"
  resize="both"
  value="Example Text"
/>
`;

exports[`TextFieldWrapper renders text input with an error 1`] = `
<TextField
  error="Oh no!"
  id="example"
  name="example"
  resize="both"
/>
`;

exports[`TextFieldWrapper renders with resize=vertical when multiline 1`] = `
<TextField
  id="example"
  multiline={true}
  name="example"
  resize="vertical"
/>
`;
